Update paper spigot versions. Add jvm arguments.